# Computer-Graphics

./: .gitignore  .gitmodules  CMakeLists.txt  dependencies.sh  imgui.ini  main.cpp
src/callback/: CallbackManager.cpp  CallbackManager.hpp  ICallback.hpp
src/config/: MenuConfig.hpp
src/core/: IObject.cpp  IObject.hpp  Point.cpp  Point.hpp
src/core/drawer/: Drawer.cpp  Drawer.hpp  DrawerConeLines.cpp  DrawerCurves.cpp  DrawerLines.cpp
src/core/matrix/: Matrix.cpp  Matrix.hpp
src/core/objectPool/: ObjectPool.cpp  ObjectPool.hpp
src/core/point/: Point.cpp  Point.hpp
src/core/refPoint/: RefPoint.cpp  RefPoint.hpp
src/core/utils/: Utils.cpp  Utils.hpp
src/draw/: DrawableObjectPool.hpp  IDrawable.cpp  IDrawable.hpp
src/draw/Line/: Line.cpp  Line.hpp
src/modes/: IDrawer.hpp  IMode.cpp  IMode.hpp
src/modes/LineDDAMode/: LineDDAMode.hpp
src/modes/curves/: ICurveMode.cpp  ICurveMode.hpp
src/modes/default/: DefaultMode.cpp  DefaultMode.hpp
src/modes/editor/: EditorMode.cpp  EditorMode.hpp
src/modes/line/: ILineMode.cpp  ILineMode.hpp
src/modes/lines/: ILineMode.cpp  ILineMode.hpp
src/modes/modeManager/: ModeManager.cpp  ModeManager.hpp
src/modes/selector/: SelectorMode.cpp  SelectorMode.hpp
src/objectPool/: ObjectPool.cpp  ObjectPool.hpp
src/objects/: DrawableObjectPool.cpp  DrawableObjectPool.hpp  IDrawable.cpp  IDrawable.hpp  IEditable.cpp  IEditable.hpp  IObject.cpp  IObject.hpp
src/objects/Curve/: Curve.cpp  Curve.hpp
src/objects/Line/: Line.cpp  Line.hpp
src/utils/: Utils.cpp  Utils.hpp
src/window/: Window.cpp  Window.hpp
(+76 files in other folders)
